	Fixed bug: images in .gif and .ico format could not be displayed.
	The application icon can be changed
	Added extra diff highlighting for single line changes
	Added asynchronous loading of files for diffs and general viewing to improve responsiveness
	Added "Show relative date" option to context menu of revision grid
	Copy from diff viewer copies code without '+', '-' or ' ' markings

Version 1.89
	Fixed bug: Changes of an unstaged file are not shown when the file path contains spaces
	Fixed bug: Filehistory not working when opened from Visual Studio because filename is too long
	Fixed bug: Copy selected text from file viewer now copies the complete selected text
	Fixed bug: A slash is added at the end of all url's in the history, breaking some urls
	The author date and commit date are both shown when they differ
	The author and committer are both shown when they differ
	Added option to show author date in revision graph instead of commit date
	Added "No fast-forward" option to merge dialog
	Added "Open With Difftool" to context menu in commit dialog
	Added drag file support to unstaged items in commit dialog

Version 1.88
	Fixed a bug stopping the commit dialog from refreshing after a commit
	Removed the tooltip delay on recent repository list	
	Fixed settings when using git.exe

Version 1.87
	Small fixes in layout commit dialog
	Only close commit dialog when no modified files are left
	Added 'Open' and 'Open With' to context menu of commit dialog
	
Version 1.86
	Changed the layout of the commit dialog
	Added support for Cygwin
	Added cleanup function

Version 1.85
	Added context menu options to manipulate Diff viewer.
	Fixed alt-c as shortcut to commit.
	Added cherry pick commit to context menu of revision grid
	Added 'treat file as text' option to diff viewer
	
Version 1.84
	Added support for Visual Studio 2010 (beta)
	Fixed 'Add to .gitignore' function in commit dialog.

Version 1.83
	Added "Merge with branch" context menu item to the revision grid