@@ -2455,6 +2455,12 @@ namespace GitCommands
             return RunCmd(Settings.GitCommand, "difftool --no-prompt \"" + filename + "\"");
         }
 
+        public static string OpenWithDifftool(string filename, string revision1, string revision2)
+        {
+            return RunCmd(Settings.GitCommand, "difftool --no-prompt " + revision2 + " " + revision1 + " -- \"" + filename + "\"");
+        }
+
+
         public static string MergeBranchCmd(string branch, bool allowFastForward)
         {
             if (!allowFastForward)
