@@ -8,6 +8,7 @@ Version 1.90
 	Added asynchronous loading of files for diffs and general viewing to improve responsiveness
 	Added "Show relative date" option to context menu of revision grid
 	Copy from diff viewer copies code without '+', '-' or ' ' markings
+	Added "Open with difftool" option to diff view in browse dialog
 
 Version 1.89
 	Fixed bug: Changes of an unstaged file are not shown when the file path contains spaces
